fix: fixed uneven images being processed incorrectly and background image being visible

--- a/style.css
+++ b/style.css
@@ -222,5 +222,6 @@ label.checkbox {
 }
 .output > p > div > span {
 	background-color: var(--bg-color);
+	flex: 1;
 }
 
